Changes to MVVM, Views, ViewModels : The projects is still forming.

--- a/TimelineMe/TimelineMe.csproj
+++ b/TimelineMe/TimelineMe.csproj
@@ -112,6 +112,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MergeScenario.xaml.cs">
+      <DependentUpon>MergeScenario.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\StudioScenario.xaml.cs">
       <DependentUpon>StudioScenario.xaml</DependentUpon>
     </Compile>
@@ -149,6 +152,10 @@
     <Page Include="Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\MergeScenario.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\StudioScenario.xaml">
       <SubType>Designer</SubType>
